add KS dependency

--- a/acre.config
+++ b/acre.config
@@ -2,12 +2,12 @@
   "API": "",
   "CaseCode": true,
   "Dependencies": [
-    {
-      "Alias": "TamStat.Koko",
-      "Inject": 1,
-      "URL": "https://github.com/JoshDavid/KokoStats",
-      "Version": "0.0.0"
-    }
+	{
+		"URL":"https://github.com/JoshDavid/KokoStats",
+		"Version":"0.0.0",
+		"Inject":1 
+	}
+
   ],
   "DevelopmentFolders": [
   ],
@@ -19,6 +19,6 @@
   "OnSave": "",
   "ProjectSpace": "#.TamStat",
   "StartUp": "",
-  "URL": "https://github.com/JoshDavid/TamStatCore",
+  "URL": "",
   "Version": "0.0.0"
 }
