--- a/acre.config
+++ b/acre.config
@@ -19,6 +19,6 @@
   "OnSave": "",
   "ProjectSpace": "#.TamStat",
   "StartUp": "",
-  "URL": "",
+  "URL": "https://github.com/steveman7/TamStatCore",
   "Version": "0.0.0"
 }
