--- a/acre.config
+++ b/acre.config
@@ -2,12 +2,11 @@
   "API": "",
   "CaseCode": true,
   "Dependencies": [
-	{
-		"URL":"https://github.com/JoshDavid/KokoStats",
-		"Version":"0.0.0",
-		"Inject":1 
-	}
-
+    {
+      "Inject": 1,
+      "URL": "https://github.com/JoshDavid/KokoStats",
+      "Version": "0.0.0"
+    }
   ],
   "DevelopmentFolders": [
   ],
@@ -20,5 +19,5 @@
   "ProjectSpace": "#.TamStat",
   "StartUp": "",
   "URL": "https://github.com/steveman7/TamStatCore",
-  "Version": "0.0.0"
+  "Version": "1.0.0"
 }
